--- a/style/index.css
+++ b/style/index.css
@@ -15,19 +15,46 @@
 --> white 
 */
 /* General */
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
     max-width: 100%;
   }
+  body{
+    background-color: #fff8dd;
+  }
 /* Nav */
 .links {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    margin: 4% auto;
+    align-content: center;
     overflow: hidden;
     background-color: #333;
 }
 .links a {
-    display: inline;
     font-size: 16px;
     color: white;
     text-align: center;
@@ -37,7 +64,6 @@
   /* End Nav */
   /* Drop down feature */
 .dropdown {
-    float: left;
     overflow: hidden;
   }
   
