--- a/style/index.css
+++ b/style/index.css
@@ -105,6 +105,7 @@ time, mark, audio, video {
 /* End of Dropdown */
 /* Text, background, color */
 h1{
+    font-size: 2rem;
     color: #D4A59A;
     /* skin neutral */
 }
@@ -115,8 +116,13 @@ h2{
 /* Images */
 .Devs{
   display: flex;
-  flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-between;
+}
+.Devs section {
+  width: 26%;
+  padding:2%;
+  text-align: center;
 }
 /* #Henry{
 
