--- a/style/index.css
+++ b/style/index.css
@@ -40,8 +40,13 @@ time, mark, audio, video {
   body{
     background-color: #fff8dd;
   }
+/* End of General */
+
+
 /* Nav */
 .links {
+    padding-top: 0.5%;
+    padding-bottom: 1%;
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
@@ -50,17 +55,11 @@ time, mark, audio, video {
     background-color: #333;
 }
 .links a {
-    font-size: 16px;
     color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
   }
-.links .search-container {
-    display: flex;
-    flex-direction: column;
-  }
-  
 .links input[type=text] {
     padding: 6px;
     margin-top: 8px;
@@ -70,16 +69,46 @@ time, mark, audio, video {
 .links input[type=text] {
     border: 1px solid #ccc;  
   }
+.sections{
+  color: #F3E0DC;
+  margin: 1% 1%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  background-color: #420D09;
+}
+.info{
+  display: flex;
+}
+.sidebar{
+  width: 25%;
+  text-align: center;
+  color: #F3E0DC;
+  margin: 1% 1%;
+  padding: 1% 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  background-color: #420D09;
+}
+.sidebar a{
+  height: 100%;
+  color: #F3E0DC;
+}
+.sidebar a:link {
+  text-decoration: none;
+}
 /* End Nav */
+
+
 /* Drop down feature */
 .dropdown {
-    width: 9%;
+    width: 7%;
     overflow: hidden;
   }
 .dropdown .dropbtn {
     font-size: 16px;  
     border: none;
-    outline: none;
     color: white;
     padding: 14px 16px;
     background-color: inherit;
@@ -93,17 +122,14 @@ time, mark, audio, video {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
   } 
 .dropdown-content a {
-    float: none;
     color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
-    text-align: left;
+    text-align: centers;
   }
 .dropdown-content a:hover {
     background-color: #ddd;
@@ -112,9 +138,11 @@ time, mark, audio, video {
     display: block;
   }
 /* End of Dropdown */
+
+
 /* Text, background, color */
 h1{
-    
+    font-family: 'Montez', cursive;
     margin: 0.01% 1%;
     height: 0px;
     width: 100%;
@@ -123,19 +151,44 @@ h1{
     /* skin neutral */
 }
 h2{
-  font-size: 1.6rem;
+  font-family: 'Montez', cursive;
+  font-size: 3rem;
   text-align: center;
-  color: #BC4639;
+  color: #F3E0DC;
+  background-color: #420D09 ;
+}
+h3{
+  margin: 2% 0;
 }
 p{
-  font-size: 1.1rem;
+  font-family: 'Handlee', cursive;
+  font-size: 2rem;
   text-align: center;
 }
 p, h2{
   margin: 2%;
 }
 /* End of text */
+
+
+/* Mid section */
+#middle{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  float: right;
+}
+/* End of mid section */
+
+
 /* Images */
+#kitchen{
+  border-radius: 5%;
+  display: flex;
+  flex-wrap: wrap;
+  float: right;
+  width: 100%;
+}
 .Devs{
   display: flex;
   flex-wrap: wrap;
@@ -146,40 +199,46 @@ p, h2{
   padding:2%;
   text-align: center;
 }
-#Henry{
-
+#below{
+  font-size: 2rem;
+  color: #ccc;
+  background-color: #420D09;
+  padding: 2%;
 }
-/*
-#Chris{
-
+#Henry:hover{
+  border:10px dotted #4285F4;
 }
-#Nicholas{
 
+#Chris:hover{
+  border:10px dotted #4285F4;
 }
-#Stephanie{
-
+#Nicholas:hover{
+  border:10px dotted #4285F4;
 }
-#Francisco{
+#Stephanie:hover{
+  border:10px dotted #4285F4;
+}
+#Francisco:hover{
+  border:10px dotted #4285F4;
+}
+/* End of images */
 
-} */
+
 /* Responsive Design */
+@media(max-width: 1200px){
+  .dropdown{
+    width: 16%;
+    }
+}
 @media(max-width: 1000px){
+  #below{
+    font-size: 1.5rem;
+    color: #ccc;
+    background-color: #420D09;
+    padding: 2%;
+  }
 .dropdown{
-  width: 16%;
-}
-@media(max-width: 860px){
-  .dropdown{
-    width: 17%;
-  }
-}
-@media(max-width: 820px){
-  .dropdown{
-    width: 19%;
-  }
-}
-@media screen and (max-width: 600px) {
-  .links .search-container {
-    float: none;
+  width: 28%;
   }
 }
 @media(max-width: 500px){
@@ -205,10 +264,40 @@ p, h2{
   text-align: center;
   font-size: 1.3rem;
 }
-/* #Henry{
-  -moz-hyphens: ;
-} */
 .dropdown{
   width: 16.5%;
+}
+.sidebar{
+  width: 25%;
+  text-align: center;
+  color: #F3E0DC;
+  margin: 1% 1%;
+  padding: 1% 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  background-color: #420D09;
+}
+#kitchen{
+  border-radius: 5%;
+  display: flex;
+  flex-wrap: wrap;
+  float: right;
+  width: 50%;
+}
+/* About Page */
+#below{
+  font-size: 1rem;
+  color: #ccc;
+  background-color: #420D09;
+  padding: 2%;
+}
+.Devs{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.Devs section {
+  width: 50%;
 }
 }
