fixed icon dash thing

--- a/style/index.css
+++ b/style/index.css
@@ -205,6 +205,9 @@ h3{
   text-decoration: none;
   color: #420D09;
 }
+.Devs #Chris a{
+  text-decoration: none;
+}
 /* End of Icons */
 
 /* Images */
