--- a/style/index.css
+++ b/style/index.css
@@ -85,10 +85,7 @@ time, mark, audio, video {
 .sections a:link{
   text-decoration: none;
 }
-.info{
-  display: flex;
-}
-.sidebar{
+/* .sidebar{
   font-family: 'Handlee', cursive;
   border-radius: 2%;
   width: 25%;
@@ -106,7 +103,7 @@ time, mark, audio, video {
 }
 .sidebar a:link {
   text-decoration: none;
-}
+} */
 .search-container{
   margin: 0 1%;
 }
@@ -192,10 +189,19 @@ h3{
 
 
 /* Mid section */
+.midmid {
+  display: flex;
+  flex-direction: column;
+}
+
 #middle{
   width: 100%;
   display: flex;
   flex-direction: column;
+}
+.midmid section.midimage #kitchen{
+  border-radius: 25%;
+  width: 50%;
 }
 /* End of mid section */
 
@@ -209,13 +215,8 @@ h3{
 }
 /* End of Icons */
 
+
 /* Images */
-#kitchen{
-  border-radius: 5%;
-  display: flex;
-  flex-wrap: wrap;
-  width: 100%;
-}
 .Devs{
   display: flex;
   flex-wrap: wrap;
@@ -372,7 +373,7 @@ nav {
 
 /* Image */
 #kitchen{
-  border-radius: 5%;
+  border-radius: 25%;
   display: flex;
   flex-wrap: wrap;
   width: 100%;
